# C-c-to-app

./: build.gradle  build.gradle.kts  gradle-wrapper.properties  gradle.properties  gradlew  gradlew.bat  local.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/Cpp/: CMakeLists.txt  main.cpp
app/src/main/java/com/night/backgroundchange/: MainActivity.java
app/src/main/java/com/subho760/c_to_app/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
native-lib/: build.gradle
native-lib/src/main/cpp/: CMakeLists.txt  main.cpp  my_logic.h
